[package]
name = "image-encoder"
version = "0.1.0"
license = "MIT"
description = "simple image encoder for png encoding"
documentation = "https://docs.rs/image-encoder"
repository = "https://github.com/UnwrittenFun/image-encoder"
authors = ["James Birtles <jameshbirtles@gmail.com>", "James Swash <james.swash@hotmail.co.uk>"]
edition = "2018"

[dependencies]
crc = "1.8.1"
adler32 = "1.0.4"

[dev_dependencies]
scrap = "0.5.0"
